option(
    'udevrulesdir',
    description: 'The path to udev rules.',
    type: 'string',
    value: '/lib/udev/rules.d')
option(
    'busname-prefix',
    description: 'The DBus busname prefix.',
    type: 'string',
    value: 'xyz.openbmc_project.Hwmon')
option(
    'negative-errno-on-fail',
    description: 'Set sensor value to -errno on read failures.',
    type: 'boolean')
option(
    'sensor-root',
    description: 'The DBus sensors namespace root.',
    type: 'string',
    value: '/xyz/openbmc_project/sensors')
option(
    'tests', type: 'feature', description: 'Build tests.',
)
option(
    'update-functional-on-fail',
    description: 'Update functional property on read failures.  Incompatible with negative-errno-on-fail.',
    type: 'boolean')
option(
    'enable-max31785-msl',
    type: 'boolean',
    value: false,
    description: 'Include building and installing the MAX31785 chip\'s minimum ship level checking application.'
)
